# poem-eval

./: README.md  pyproject.toml
self_probe/: analyze.py  config.yaml  embed.py  make_viewer.py  run_probe.py  stats.py  viewer.html  visualize.py
self_probe/results/: coords_tsne_perp10.0.npz  coords_tsne_perp5.0.npz  embeddings_all-MiniLM-L6-v2.npz  outliers.md  raw_responses-bugged.jsonl  raw_responses.jsonl  scored_results.csv  stats.md  summary.md  viewer.html
self_probe/results/figures/: correlations.csv  model_stats.csv
